--- a/styles.css
+++ b/styles.css
@@ -5563,193 +5563,193 @@ body {
 /* line 1, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.twitter > a {
-  background-image: url(../images/icons/social/twitter.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/twitter.png);
 }
 
 /* line 2, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.facebook > a {
-  background-image: url(../images/icons/social/facebook.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/facebook.png);
 }
 
 /* line 3, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.dribbble > a {
-  background-image: url(../images/icons/social/Dribbble.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/Dribbble.png);
 }
 
 /* line 4, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.google > a {
-  background-image: url(../images/icons/social/google-plus.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/google-plus.png);
 }
 
 /* line 5, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.behance > a {
-  background-image: url(../images/icons/social/behance.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/behance.png);
 }
 
 /* line 6, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.youtube > a {
-  background-image: url(../images/icons/social/youtube.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/youtube.png);
 }
 
 /* line 7, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.flikr > a {
-  background-image: url(../images/icons/social/flikr.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/flikr.png);
 }
 
 /* line 8, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.pinterest > a {
-  background-image: url(../images/icons/social/pinterest.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/pinterest.png);
 }
 
 /* line 9, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.amazon > a {
-  background-image: url(../images/icons/social/amazon.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/amazon.png);
 }
 
 /* line 10, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.appel > a {
-  background-image: url(../images/icons/social/appel.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/appel.png);
 }
 
 /* line 11, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.appstore > a {
-  background-image: url(../images/icons/social/appstore.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/appstore.png);
 }
 
 /* line 12, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.blogger > a {
-  background-image: url(../images/icons/social/blogger.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/blogger.png);
 }
 
 /* line 13, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.delicious > a {
-  background-image: url(../images/icons/social/delicious.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/delicious.png);
 }
 
 /* line 14, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.deviantart > a {
-  background-image: url(../images/icons/social/deviantart.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/deviantart.png);
 }
 
 /* line 15, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.digg > a {
-  background-image: url(../images/icons/social/digg.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/digg.png);
 }
 
 /* line 16, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.dropbox > a {
-  background-image: url(../images/icons/social/dropbox.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/dropbox.png);
 }
 
 /* line 17, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.forrst > a {
-  background-image: url(../images/icons/social/forrst.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/forrst.png);
 }
 
 /* line 18, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.html5 > a {
-  background-image: url(../images/icons/social/html5.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/html5.png);
 }
 
 /* line 19, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.instagram > a {
-  background-image: url(../images/icons/social/instagram.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/instagram.png);
 }
 
 /* line 20, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.last_fm > a {
-  background-image: url(../images/icons/social/last_fm.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/last_fm.png);
 }
 
 /* line 21, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.linkedin > a {
-  background-image: url(../images/icons/social/linkedin.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/linkedin.png);
 }
 
 /* line 22, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.paypal > a {
-  background-image: url(../images/icons/social/paypal.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/paypal.png);
 }
 
 /* line 23, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.picasa > a {
-  background-image: url(../images/icons/social/picasa.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/picasa.png);
 }
 
 /* line 24, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.rss > a {
-  background-image: url(../images/icons/social/rss.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/rss.png);
 }
 
 /* line 25, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.skype > a {
-  background-image: url(../images/icons/social/skype.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/skype.png);
 }
 
 /* line 26, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.stumbleupon > a {
-  background-image: url(../images/icons/social/stumbleupon.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/stumbleupon.png);
 }
 
 /* line 27, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.technorati > a {
-  background-image: url(../images/icons/social/technorati.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/technorati.png);
 }
 
 /* line 28, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.tumblr > a {
-  background-image: url(../images/icons/social/tumblr.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/tumblr.png);
 }
 
 /* line 29, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.vimeo > a {
-  background-image: url(../images/icons/social/vimeo.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/vimeo.png);
 }
 
 /* line 30, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.windows > a {
-  background-image: url(../images/icons/social/windows.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/windows.png);
 }
 
 /* line 31, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.wordpress > a {
-  background-image: url(../images/icons/social/wordpress.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/wordpress.png);
 }
 
 /* line 32, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_icons.scss */
 
 .social li.yahoo > a {
-  background-image: url(../images/icons/social/yahoo.png);
+  background-image: url(http://pixeldima.com/theme/target/images/icons/social/yahoo.png);
 }
 
 /***********************************************************************************************/
@@ -5768,7 +5768,7 @@ body {
 
 header {
   position: absolute;
-  background: url('../images/ui/pattren.png?1380739150');
+  background: url('http://pixeldima.com/theme/target/images/ui/pattren.png?1380739150');
   z-index: 50;
   width: 100%;
   height: 200px;
@@ -5797,7 +5797,7 @@ header {
   min-height: 350px;
   width: 100%;
   z-index: 0;
-  background: url('../images/bg.jpg?1381009499');
+  background: url('http://pixeldima.com/theme/target/images/bg.jpg?1381009499');
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
@@ -5819,7 +5819,7 @@ header {
 .bg_color .bg1 {
   -webkit-background-size: cover;
   background-size: cover;
-  background: url('../images/ui/Targets.png?1380673094');
+  background: url('http://pixeldima.com/theme/target/images/ui/Targets.png?1380673094');
   background-position: center;
   z-index: -100;
   height: 100%;
@@ -5834,7 +5834,7 @@ header {
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
-  background: url('../images/ui/TargetsSmall.png?1381009044');
+  background: url('http://pixeldima.com/theme/target/images/ui/TargetsSmall.png?1381009044');
   z-index: -100;
   background-repeat: no-repeat;
   height: 100%;
@@ -5860,7 +5860,7 @@ header {
 /* line 77, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 #countdown li {
-  background: url('../images/ui/circle.png?1380726866');
+  background: url('http://pixeldima.com/theme/target/images/ui/circle.png?1380726866');
   margin-bottom: 30px;
   background-repeat: no-repeat;
   width: 153px;
@@ -5907,7 +5907,7 @@ header {
 
 #countdown li .info .ship {
   position: relative;
-  background: url('../images/ui/ship.png?1380730041');
+  background: url('http://pixeldima.com/theme/target/images/ui/ship.png?1380730041');
   background-repeat: no-repeat;
   width: 80px;
   height: 80px;
@@ -5949,7 +5949,7 @@ header {
 
 #countdown li .info .label {
   position: relative;
-  background: url('../images/ui/lable.png?1380727825');
+  background: url('http://pixeldima.com/theme/target/images/ui/lable.png?1380727825');
   background-repeat: no-repeat;
   background-position: 50% 70%;
 }
@@ -5999,7 +5999,7 @@ header {
 /* line 172, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 .ourinfo span p {
-  background: url('../images/icons/info.png?1380977618');
+  background: url('http://pixeldima.com/theme/target/images/icons/info.png?1380977618');
   height: 32px;
   width: 32px;
 }
@@ -6007,7 +6007,7 @@ header {
 /* line 182, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 .popup {
-  background: url('../images/pattren.png?1380993106');
+  background: url('http://pixeldima.com/theme/target/images/pattren.png?1380993106');
   position: absolute;
   bottom: -500px;
   width: 410px;
@@ -6061,7 +6061,7 @@ header {
 /* line 219, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 .popup .information a {
-  background: url('../images/icons/close.png?1380992996');
+  background: url('http://pixeldima.com/theme/target/images/icons/close.png?1380992996');
   position: absolute;
   bottom: 10px;
   right: 22px;
@@ -6074,7 +6074,7 @@ header {
 
 .popup span {
   position: absolute;
-  background: url('../images/ui/line.png?1380993400');
+  background: url('http://pixeldima.com/theme/target/images/ui/line.png?1380993400');
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
@@ -6086,7 +6086,7 @@ header {
   /* line 230, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
   .popup span {
-    background: url('../images/ui/linePhone.png?1380998506');
+    background: url('http://pixeldima.com/theme/target/images/ui/linePhone.png?1380998506');
     background-repeat: no-repeat;
   }
 }
@@ -6101,7 +6101,7 @@ header {
 
 footer {
   position: absolute;
-  background: url('../images/ui/pattren.png?1380739150');
+  background: url('http://pixeldima.com/theme/target/images/ui/pattren.png?1380739150');
   z-index: 50;
   width: 100%;
   height: 200px;
@@ -6121,7 +6121,7 @@ footer {
 /* line 256, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 footer fieldset {
-  background: url('../images/ui/sub.png?1380739414');
+  background: url('http://pixeldima.com/theme/target/images/ui/sub.png?1380739414');
   background-repeat: no-repeat;
   width: 420px;
   height: 170px;
@@ -6177,7 +6177,7 @@ footer fieldset .inputSet {
 /* line 290, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 footer fieldset .inputSet .leftdiv {
-  background: url('../images/ui/right-button.png?1380674198');
+  background: url('http://pixeldima.com/theme/target/images/ui/right-button.png?1380674198');
   background-repeat: no-repeat;
   width: 85px;
   height: 36px;
@@ -6234,7 +6234,7 @@ footer fieldset .inputSet input:focus {
 /* line 325, E:/xampp/htdocs/ComingSoon/P-DIMA/css/sass/_layout.scss */
 
 footer fieldset .inputSet .but {
-  background: url('../images/ui/left_button.png?1380674173');
+  background: url('http://pixeldima.com/theme/target/images/ui/left_button.png?1380674173');
   background-repeat: no-repeat;
   width: 95px;
   height: 36px;
